fix: fixes minor layout bugs

--- a/src/components/about/About.module.css
+++ b/src/components/about/About.module.css
@@ -89,7 +89,7 @@
     }
 
     .aboutItem {
-        padding-left: 4;
+        padding-left: 0;
         padding-right: 0;
     }
     
