--- a/src/components/contact/Contact.module.css
+++ b/src/components/contact/Contact.module.css
@@ -11,16 +11,17 @@
     padding: 58px 10%;
     gap: 10px;
     z-index: 2;
+    overflow: hidden;
 }
 
 .text h2 {
-    font-size: 76px;
+    font-size: 56px;
     font-weight: 700;
     letter-spacing: 4px;
 }
 
 .text p {
-    font-size: 40px;
+    font-size: 32px;
     font-weight: 400;
     letter-spacing: 2px;
 }
@@ -56,10 +57,13 @@
     .text {
       display: flex;
       flex-direction: column;
-      align-items: center;
     }
-  
-    .links {
-      align-items: center;
+
+    .text p {
+      font-size: 24px;
+    }
+
+    .link a {
+      font-size: 18px;
     }
 }
