--- a/src/components/hero/Hero.module.css
+++ b/src/components/hero/Hero.module.css
@@ -76,4 +76,15 @@
     .content {
         align-items: center;
     }
+
+    .title {
+        /* padding: 5%; */
+        font-size: 62px;
+        text-align: center;
+    }
+
+    .description {
+        font-size: 24px;
+        text-align: center;
+    }
 }
